Set the title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Reza Aghaei
+description: My notes about C#, .NET, ASP.NET, Windows Forms, Azure, PowerShell, …
